Update Описание паттернов.md - адаптер

--- a/LabWork6/Описание паттернов.md
+++ b/LabWork6/Описание паттернов.md
@@ -603,3 +603,116 @@ namespace ConsultationAPI.Services
     }
 }
 ```
+
+### 4. Adapter (Адаптер)
+
+#### Общее назначение
+Адаптер — это структурный паттерн проектирования, который позволяет объектам с несовместимыми интерфейсами работать вместе. Он выступает в роли моста, преобразуя вызовы одного интерфейса в вызовы другого, не изменяя их исходный код.
+
+#### Назначение в проекте "Система управления консультациями"
+В системе существует единый интерфейс `INotification` для отправки уведомлений. В данный момент все уведомления отправляются через Telegram с помощью класса `TelegramNotification`. Однако в будущем может потребоваться интеграция с другим мессенджером, например **MaxMessenger**, который имеет несовместимый интерфейс (метод `SendMaxMessage` с другими параметрами). Паттерн Adapter позволяет создать класс-адаптер, который приведёт интерфейс MaxMessenger к стандарту `INotification`, не меняя код ни существующей системы, ни самого MaxMessenger. На данный момент адаптер написан и хранится в проекте "про запас", готовый к использованию при необходимости.
+
+#### UML-диаграмма
+
+```mermaid
+classDiagram
+    class INotification {
+        <<interface>>
+        +Send(string message, Booking booking)
+    }
+    
+    class TelegramNotification {
+        +Send(string message, Booking booking)
+    }
+    
+    class MaxMessenger {
+        +SendMaxMessage(string userId, string text, string studentName)
+    }
+    
+    class MaxMessengerAdapter {
+        -MaxMessenger _maxMessenger
+        +MaxMessengerAdapter(MaxMessenger maxMessenger)
+        +Send(string message, Booking booking)
+    }
+    
+    INotification <|.. TelegramNotification : реализует
+    INotification <|.. MaxMessengerAdapter : реализует
+    MaxMessengerAdapter --> MaxMessenger : адаптирует
+    
+    style INotification fill:#e0e0e0,stroke:#333,stroke-width:2px
+    style TelegramNotification fill:#d3d3d3,stroke:#333,stroke-width:1px
+    style MaxMessenger fill:#b0b0b0,stroke:#333,stroke-width:1px
+    style MaxMessengerAdapter fill:#c0c0c0,stroke:#333,stroke-width:2px
+```
+
+**Описание диаграммы:**
+- **INotification** целевой интерфейс, используемый в системе.
+- **TelegramNotification** существующая реализация, работающая напрямую.
+- **MaxMessenger** внешний класс с несовместимым интерфейсом (Adaptee).
+- **MaxMessengerAdapter** адаптер, реализующий интерфейс `INotification` и перенаправляющий вызовы к `MaxMessenger` с преобразованием параметров.
+
+#### Фрагмент программного кода
+
+**Интерфейс INotification (целевой интерфейс):**
+```csharp
+public interface INotification
+{
+    void Send(string message, Booking booking);
+}
+```
+
+**Существующая реализация для Telegram:**
+```csharp
+public class TelegramNotification : INotification
+{
+    public void Send(string message, Booking booking)
+    {
+        if (string.IsNullOrEmpty(booking.TelegramId))
+        {
+            Console.WriteLine("Telegram ID не указан, уведомление не отправлено");
+            return;
+        }
+        
+        Console.WriteLine($" TELEGRAM отправлено пользователю {booking.TelegramId}");
+        Console.WriteLine($"   Сообщение: {message}");
+        Console.WriteLine($"   Студент: {booking.StudentName}");
+    }
+}
+```
+
+**Внешний класс с несовместимым интерфейсом (Adaptee):**
+```csharp
+public class MaxMessenger
+{
+    public void SendMaxMessage(string userId, string text, string studentName)
+    {
+        Console.WriteLine($" MAX MESSENGER -> {userId}");
+        Console.WriteLine($"   Сообщение: {text}");
+        Console.WriteLine($"   Студент: {studentName}");
+        Console.WriteLine($"   Отправлено через MaxMessenger");
+    }
+}
+```
+
+**Адаптер, приводящий интерфейс MaxMessenger к INotification:**
+```csharp
+public class MaxMessengerAdapter : INotification
+{
+    private readonly MaxMessenger _maxMessenger;
+    
+    public MaxMessengerAdapter(MaxMessenger maxMessenger)
+    {
+        _maxMessenger = maxMessenger;
+    }
+    
+    public void Send(string message, Booking booking)
+    {
+        // Преобразуем данные из Booking в параметры для MaxMessenger
+        string userId = booking.TelegramId ?? "unknown_user";
+        string studentName = booking.StudentName;
+        
+        _maxMessenger.SendMaxMessage(userId, message, studentName);
+    }
+}
+```
+*Продолжение следует...*
