Update Описание паттернов.md - декоратор

--- a/LabWork6/Описание паттернов.md
+++ b/LabWork6/Описание паттернов.md
@@ -715,4 +715,167 @@ public class MaxMessengerAdapter : INotification
     }
 }
 ```
-*Продолжение следует...*
+### 5. Decorator (Декоратор)
+
+#### Общее назначение
+Декоратор — это структурный паттерн, который позволяет динамически добавлять объектам новую функциональность, оборачивая их в полезные «обёртки». Декоратор предоставляет гибкую альтернативу созданию подклассов для расширения функциональности.
+
+#### Назначение в проекте 
+В системе есть базовые уведомления (Email, Telegram). Иногда требуется дополнительная функциональность: шифрование сообщений или автоматические повторные попытки при ошибках. Паттерн Decorator позволяет «обернуть» базовое уведомление в декораторы, добавляющие такое поведение, без изменения кода самих уведомлений.
+
+#### UML-диаграмма
+
+```mermaid
+classDiagram
+    class INotification {
+        <<interface>>
+        +Send(string message, Booking booking)
+    }
+
+    class EmailNotification {
+        +Send(string message, Booking booking)
+    }
+
+    class TelegramNotification {
+        +Send(string message, Booking booking)
+    }
+
+    class NotificationDecorator {
+        #INotification _wrappee
+        +NotificationDecorator(INotification wrappee)
+        +Send(string message, Booking booking)*
+    }
+
+    class EncryptingDecorator {
+        +Send(string message, Booking booking)
+    }
+
+    class RetryDecorator {
+        +Send(string message, Booking booking)
+    }
+
+    INotification <|.. EmailNotification
+    INotification <|.. TelegramNotification
+    INotification <|.. NotificationDecorator
+    NotificationDecorator <|-- EncryptingDecorator
+    NotificationDecorator <|-- RetryDecorator
+    NotificationDecorator o--> INotification : оборачивает
+
+    style INotification fill:#e0e0e0,stroke:#333,stroke-width:2px
+    style EmailNotification fill:#d3d3d3,stroke:#333,stroke-width:1px
+    style TelegramNotification fill:#d3d3d3,stroke:#333,stroke-width:1px
+    style NotificationDecorator fill:#c0c0c0,stroke:#333,stroke-width:2px
+    style EncryptingDecorator fill:#b0b0b0,stroke:#333,stroke-width:1px
+    style RetryDecorator fill:#b0b0b0,stroke:#333,stroke-width:1px
+```
+
+**Описание диаграммы:**
+- **INotification** общий интерфейс для всех уведомлений.
+- **EmailNotification**, **TelegramNotification** конкретные компоненты, реализующие базовую функциональность.
+- **NotificationDecorator** абстрактный декоратор, хранит ссылку на оборачиваемый объект и делегирует ему выполнение.
+- **EncryptingDecorator**, **RetryDecorator** конкретные декораторы, добавляющие своё поведение до/после вызова обёрнутого объекта.
+
+#### Фрагмент программного кода
+
+**Базовый интерфейс и компоненты:**
+```csharp
+public interface INotification
+{
+    void Send(string message, Booking booking);
+}
+
+public class TelegramNotification : INotification
+{
+    public void Send(string message, Booking booking)
+    {
+        Console.WriteLine($"TELEGRAM: {booking.TelegramId} - {message}");
+    }
+}
+
+public class EmailNotification : INotification
+{
+    public void Send(string message, Booking booking)
+    {
+        Console.WriteLine($"EMAIL: {booking.Email} - {message}");
+    }
+}
+```
+
+**Абстрактный декоратор:**
+```csharp
+public abstract class NotificationDecorator : INotification
+{
+    protected INotification _wrappee;
+
+    public NotificationDecorator(INotification wrappee)
+    {
+        _wrappee = wrappee;
+    }
+
+    public virtual void Send(string message, Booking booking)
+    {
+        _wrappee.Send(message, booking);
+    }
+}
+```
+
+**Декоратор шифрования:**
+```csharp
+public class EncryptingDecorator : NotificationDecorator
+{
+    public EncryptingDecorator(INotification wrappee) : base(wrappee) { }
+
+    public override void Send(string message, Booking booking)
+    {
+        string encrypted = $"ENCRYPTED[{message}]";
+        Console.WriteLine("Сообщение зашифровано");
+        base.Send(encrypted, booking);
+    }
+}
+```
+
+**Декоратор повторных попыток:**
+```csharp
+public class RetryDecorator : NotificationDecorator
+{
+    private readonly int _maxRetries;
+
+    public RetryDecorator(INotification wrappee, int maxRetries = 3) : base(wrappee)
+    {
+        _maxRetries = maxRetries;
+    }
+
+    public override void Send(string message, Booking booking)
+    {
+        int attempt = 0;
+        bool sent = false;
+        
+        while (!sent && attempt < _maxRetries)
+        {
+            try
+            {
+                attempt++;
+                Console.WriteLine($"Попытка отправки #{attempt}");
+                
+                base.Send(message, booking);
+                
+                sent = true;
+                Console.WriteLine("Отправлено успешно");
+            }
+            catch (Exception ex)
+            {
+                Console.WriteLine($"Ошибка: {ex.Message}");
+                
+                if (attempt >= _maxRetries)
+                {
+                    Console.WriteLine("Все попытки исчерпаны");
+                    throw;
+                }
+                
+                Console.WriteLine("Повтор через 1 секунду...");
+                Thread.Sleep(1000);
+            }
+        }
+    }
+}
+```
