Update Описание паттернов.md - прокси

--- a/LabWork6/Описание паттернов.md
+++ b/LabWork6/Описание паттернов.md
@@ -879,3 +879,272 @@ public class RetryDecorator : NotificationDecorator
     }
 }
 ```
+### 6. Proxy (Заместитель)
+
+#### Общее назначение
+Proxy — это структурный паттерн, который предоставляет объект-заместитель, контролирующий доступ к другому объекту. Заместитель имеет тот же интерфейс, что и реальный объект, поэтому для клиента нет разницы — он работает с заместителем или с реальным объектом.
+
+#### Назначение в проекте "Система управления консультациями"
+В системе часто выполняются запросы к базе данных для получения списка свободных слотов. Если слоты обновляются нечасто, можно использовать Proxy для кэширования результатов. Это уменьшит количество обращений к базе данных и ускорит ответы системы.
+
+#### UML-диаграмма
+
+```mermaid
+classDiagram
+    class ISlotRepository {
+        <<interface>>
+        +Task~List~Slot~~ GetAvailableSlotsAsync()
+        +Task~Slot~ GetSlotByIdAsync(string id)
+    }
+
+    class SlotRepository {
+        -ApplicationDbContext _context
+        +Task~List~Slot~~ GetAvailableSlotsAsync()
+        +Task~Slot~ GetSlotByIdAsync(string id)
+    }
+
+    class CachedSlotRepositoryProxy {
+        -ISlotRepository _realRepository
+        -List~Slot~ _cachedSlots
+        -DateTime _cacheTime
+        -int _cacheDurationSeconds
+        +Task~List~Slot~~ GetAvailableSlotsAsync()
+        +Task~Slot~ GetSlotByIdAsync(string id)
+        -bool IsCacheValid()
+    }
+
+    class SlotsController {
+        -ISlotRepository _slotRepository
+        +GetAvailableSlots()
+        +GetSlotById(string id)
+    }
+
+    ISlotRepository <|.. SlotRepository : реализует
+    ISlotRepository <|.. CachedSlotRepositoryProxy : реализует
+    CachedSlotRepositoryProxy --> SlotRepository : замещает
+    SlotsController --> ISlotRepository : использует
+
+    style ISlotRepository fill:#e0e0e0,stroke:#333,stroke-width:2px
+    style SlotRepository fill:#d3d3d3,stroke:#333,stroke-width:1px
+    style CachedSlotRepositoryProxy fill:#c0c0c0,stroke:#333,stroke-width:2px
+    style SlotsController fill:#d3d3d3,stroke:#333,stroke-width:1px
+```
+
+**Описание диаграммы:**
+- **ISlotRepository** общий интерфейс для работы со слотами
+- **SlotRepository** реальный объект, работающий с базой данных
+- **CachedSlotRepositoryProxy** заместитель с кэшированием
+- **SlotsController** клиент, который не знает, работает с реальным объектом или заместителем
+
+#### Фрагмент программного кода
+
+**Интерфейс репозитория:**
+
+```csharp
+using ConsultationAPI.Models;
+
+namespace ConsultationAPI.Interfaces
+{
+    public interface ISlotRepository
+    {
+        Task<List<Slot>> GetAvailableSlotsAsync();
+        Task<Slot?> GetSlotByIdAsync(string id);
+    }
+}
+```
+
+**Реальный объект (работает с БД):**
+
+```csharp
+using Microsoft.EntityFrameworkCore;
+using ConsultationAPI.Models;
+using ConsultationAPI.Enums;
+using ConsultationAPI.Interfaces;
+using ConsultationAPI.Data;
+
+namespace ConsultationAPI.Repositories
+{
+    public class SlotRepository : ISlotRepository
+    {
+        private readonly ApplicationDbContext _context;
+        
+        public SlotRepository(ApplicationDbContext context)
+        {
+            _context = context;
+        }
+        
+        public async Task<List<Slot>> GetAvailableSlotsAsync()
+        {
+            Console.WriteLine("Запрос к БД: получение свободных слотов");
+            
+            return await _context.Slots
+                .Where(s => s.Status == SlotStatus.Free)
+                .ToListAsync();
+        }
+        
+        public async Task<Slot?> GetSlotByIdAsync(string id)
+        {
+            Console.WriteLine($"Запрос к БД: получение слота {id}");
+            
+            return await _context.Slots.FindAsync(id);
+        }
+    }
+}
+```
+
+**Proxy с кэшированием:**
+
+```csharp
+using ConsultationAPI.Models;
+using ConsultationAPI.Interfaces;
+
+namespace ConsultationAPI.Proxies
+{
+    public class CachedSlotRepositoryProxy : ISlotRepository
+    {
+        private readonly ISlotRepository _realRepository;
+        private List<Slot>? _cachedSlots;
+        private DateTime _cacheTime;
+        private readonly int _cacheDurationSeconds = 30; // Кэш на 30 секунд
+        
+        public CachedSlotRepositoryProxy(ISlotRepository realRepository)
+        {
+            _realRepository = realRepository;
+        }
+        
+        public async Task<List<Slot>> GetAvailableSlotsAsync()
+        {
+            // Проверяем, есть ли валидный кэш
+            if (IsCacheValid())
+            {
+                Console.WriteLine("Proxy: возврат данных из кэша");
+                return _cachedSlots!;
+            }
+            
+            // Кэша нет или он устарел - идём в реальный репозиторий
+            Console.WriteLine("Proxy: кэш устарел, запрос к БД");
+            _cachedSlots = await _realRepository.GetAvailableSlotsAsync();
+            _cacheTime = DateTime.UtcNow;
+            
+            return _cachedSlots;
+        }
+        
+        public async Task<Slot?> GetSlotByIdAsync(string id)
+        {
+            // Для запроса по ID всегда идём в БД (не кэшируем)
+            Console.WriteLine("Proxy: запрос конкретного слота (без кэша)");
+            return await _realRepository.GetSlotByIdAsync(id);
+        }
+        
+        private bool IsCacheValid()
+        {
+            if (_cachedSlots == null)
+                return false;
+                
+            var age = DateTime.UtcNow - _cacheTime;
+            return age.TotalSeconds < _cacheDurationSeconds;
+        }
+    }
+}
+```
+
+**Другой пример Proxy для логирования:**
+
+```csharp
+namespace ConsultationAPI.Proxies
+{
+    public class LoggingSlotRepositoryProxy : ISlotRepository
+    {
+        private readonly ISlotRepository _realRepository;
+        private readonly ILogger<LoggingSlotRepositoryProxy> _logger;
+        
+        public LoggingSlotRepositoryProxy(ISlotRepository realRepository, ILogger<LoggingSlotRepositoryProxy> logger)
+        {
+            _realRepository = realRepository;
+            _logger = logger;
+        }
+        
+        public async Task<List<Slot>> GetAvailableSlotsAsync()
+        {
+            _logger.LogInformation($"Запрос свободных слотов в {DateTime.UtcNow}");
+            
+            var stopwatch = System.Diagnostics.Stopwatch.StartNew();
+            var result = await _realRepository.GetAvailableSlotsAsync();
+            stopwatch.Stop();
+            
+            _logger.LogInformation($"Получено {result.Count} слотов за {stopwatch.ElapsedMilliseconds} мс");
+            
+            return result;
+        }
+        
+        public async Task<Slot?> GetSlotByIdAsync(string id)
+        {
+            _logger.LogInformation($"Запрос слота {id}");
+            
+            var result = await _realRepository.GetSlotByIdAsync(id);
+            
+            _logger.LogInformation(result == null ? $"Слот {id} не найден" : $"Слот {id} получен");
+            
+            return result;
+        }
+    }
+}
+```
+
+**Контроллер, использующий Proxy:**
+
+```csharp
+using Microsoft.AspNetCore.Mvc;
+using ConsultationAPI.Interfaces;
+using ConsultationAPI.Proxies;
+
+namespace ConsultationAPI.Controllers
+{
+    [ApiController]
+    [Route("api/[controller]")]
+    public class SlotsController : ControllerBase
+    {
+        private readonly ISlotRepository _slotRepository;
+        
+        // Контроллер даже не знает, работает он с реальным репозиторием или с Proxy!
+        public SlotsController(ISlotRepository slotRepository)
+        {
+            _slotRepository = slotRepository;
+        }
+        
+        [HttpGet("available")]
+        public async Task<IActionResult> GetAvailableSlots()
+        {
+            var slots = await _slotRepository.GetAvailableSlotsAsync();
+            return Ok(slots);
+        }
+        
+        [HttpGet("{id}")]
+        public async Task<IActionResult> GetSlotById(string id)
+        {
+            var slot = await _slotRepository.GetSlotByIdAsync(id);
+            if (slot == null)
+                return NotFound();
+            return Ok(slot);
+        }
+    }
+}
+```
+
+**Регистрация в Program.cs (с использованием Proxy):**
+
+```csharp
+// Реальный репозиторий
+builder.Services.AddScoped<SlotRepository>();
+
+// Регистрируем интерфейс с Proxy, который оборачивает реальный репозиторий
+builder.Services.AddScoped<ISlotRepository>(serviceProvider =>
+{
+    var realRepository = serviceProvider.GetRequiredService<SlotRepository>();
+    var logger = serviceProvider.GetRequiredService<ILogger<LoggingSlotRepositoryProxy>>();
+    var loggingProxy = new LoggingSlotRepositoryProxy(realRepository, logger);
+    var cachedProxy = new CachedSlotRepositoryProxy(loggingProxy);
+    
+    return cachedProxy; // Клиент получит Proxy с кэшированием и логированием
+});
+```
