Update Описание паттернов.md - компоновщик

--- a/LabWork6/Описание паттернов.md
+++ b/LabWork6/Описание паттернов.md
@@ -1148,3 +1148,211 @@ builder.Services.AddScoped<ISlotRepository>(serviceProvider =>
     return cachedProxy; // Клиент получит Proxy с кэшированием и логированием
 });
 ```
+### 7. Composite (Компоновщик)
+
+#### Общее назначение
+Composite — это структурный паттерн, который позволяет сгруппировать объекты в древовидную структуру и работать с отдельными объектами и их группами одинаково. Клиентский код единообразно обращается и к простым, и к составным объектам.
+
+#### Назначение в проекте "Система управления консультациями"
+В системе консультаций у преподавателя может быть несколько слотов, а у слота — несколько бронирований (например, групповые консультации). Composite позволяет работать с отдельным слотом и группой слотов преподавателя через единый интерфейс, например, для отображения расписания или подсчёта занятости.
+
+#### UML-диаграмма
+
+```mermaid
+classDiagram
+    class IScheduleComponent {
+        <<interface>>
+        +string GetName()
+        +DateTime GetStartTime()
+        +DateTime GetEndTime()
+        +int GetDurationMinutes()
+        +string GetStatus()
+        +int GetBookingsCount()
+    }
+
+    class Slot {
+        -string _id
+        -string _teacherName
+        -DateTime _startTime
+        -DateTime _endTime
+        -SlotStatus _status
+        +string GetName()
+        +DateTime GetStartTime()
+        +DateTime GetEndTime()
+        +int GetDurationMinutes()
+        +string GetStatus()
+        +int GetBookingsCount()
+    }
+
+    class TeacherSchedule {
+        -string _teacherId
+        -string _teacherName
+        -List~IScheduleComponent~ _slots
+        +AddSlot(IScheduleComponent slot)
+        +RemoveSlot(IScheduleComponent slot)
+        +string GetName()
+        +DateTime GetStartTime()
+        +DateTime GetEndTime()
+        +int GetDurationMinutes()
+        +string GetStatus()
+        +int GetBookingsCount()
+    }
+
+    IScheduleComponent <|.. Slot : реализует
+    IScheduleComponent <|.. TeacherSchedule : реализует
+    TeacherSchedule o--> IScheduleComponent : содержит
+
+    style IScheduleComponent fill:#e0e0e0,stroke:#333,stroke-width:2px
+    style Slot fill:#d3d3d3,stroke:#333,stroke-width:1px
+    style TeacherSchedule fill:#c0c0c0,stroke:#333,stroke-width:2px
+```
+
+**Описание диаграммы:**
+- **IScheduleComponent** общий интерфейс для всех компонентов расписания (листьев и контейнеров)
+- **Slot** листовой компонент (отдельный слот)
+- **TeacherSchedule** составной компонент (содержит несколько слотов преподавателя)
+
+#### Фрагмент программного кода
+
+**Общий интерфейс:**
+
+```csharp
+namespace ConsultationAPI.Interfaces
+{
+    public interface IScheduleComponent
+    {
+        string GetName();
+        DateTime GetStartTime();
+        DateTime GetEndTime();
+        int GetDurationMinutes();
+        string GetStatus();
+        int GetBookingsCount();
+    }
+}
+```
+
+**Листовой компонент (Slot):**
+
+```csharp
+using ConsultationAPI.Interfaces;
+using ConsultationAPI.Models;
+using ConsultationAPI.Enums;
+
+namespace ConsultationAPI.Components
+{
+    public class SlotComponent : IScheduleComponent
+    {
+        private readonly Slot _slot;
+        private readonly int _bookingsCount;
+        
+        public SlotComponent(Slot slot, int bookingsCount = 0)
+        {
+            _slot = slot;
+            _bookingsCount = bookingsCount;
+        }
+        
+        public string GetName()
+        {
+            return $"Слот: {_slot.TeacherName} - {_slot.Description ?? "Консультация"}";
+        }
+        
+        public DateTime GetStartTime()
+        {
+            return _slot.StartTime;
+        }
+        
+        public DateTime GetEndTime()
+        {
+            return _slot.EndTime;
+        }
+        
+        public int GetDurationMinutes()
+        {
+            return (int)(_slot.EndTime - _slot.StartTime).TotalMinutes;
+        }
+        
+        public string GetStatus()
+        {
+            return _slot.Status.ToString();
+        }
+        
+        public int GetBookingsCount()
+        {
+            return _bookingsCount;
+        }
+    }
+}
+```
+
+**Составной компонент (TeacherSchedule):**
+
+```csharp
+using ConsultationAPI.Interfaces;
+
+namespace ConsultationAPI.Components
+{
+    public class TeacherScheduleComponent : IScheduleComponent
+    {
+        private readonly string _teacherId;
+        private readonly string _teacherName;
+        private readonly List<IScheduleComponent> _slots = new();
+        
+        public TeacherScheduleComponent(string teacherId, string teacherName)
+        {
+            _teacherId = teacherId;
+            _teacherName = teacherName;
+        }
+        
+        public void AddSlot(IScheduleComponent slot)
+        {
+            _slots.Add(slot);
+        }
+        
+        public void RemoveSlot(IScheduleComponent slot)
+        {
+            _slots.Remove(slot);
+        }
+        
+        public string GetName()
+        {
+            return $"Преподаватель: {_teacherName}";
+        }
+        
+        public DateTime GetStartTime()
+        {
+            if (!_slots.Any())
+                return DateTime.MaxValue;
+                
+            return _slots.Min(s => s.GetStartTime());
+        }
+        
+        public DateTime GetEndTime()
+        {
+            if (!_slots.Any())
+                return DateTime.MinValue;
+                
+            return _slots.Max(s => s.GetEndTime());
+        }
+        
+        public int GetDurationMinutes()
+        {
+            // Общая длительность всех слотов преподавателя
+            return _slots.Sum(s => s.GetDurationMinutes());
+        }
+        
+        public string GetStatus()
+        {
+            int totalSlots = _slots.Count();
+            int bookedSlots = _slots.Count(s => s.GetStatus() == "Booked");
+            
+            return $"Слотов: {totalSlots}, Занято: {bookedSlots}";
+        }
+        
+        public int GetBookingsCount()
+        {
+            // Суммарное количество бронирований у преподавателя
+            return _slots.Sum(s => s.GetBookingsCount());
+        }
+    }
+}
+```
